# flow

./: .gitignore  CMakeLists.txt  README.md  analysis.json  analyze_elf.py  combined_functions.json  config.toml  elf_analysis.json  extract_pkg.py  imports.json  missing_c6988.json  missing_functions.json  opd_functions.json  parse_imports_final.py
docs/: analysis.md
extracted/USRDIR/: imports.json
src/: config.h  crt_trace.cpp  elf_loader.cpp  elf_loader.h  flow_level.cpp  flow_level.h  hle_modules.cpp  indirect_dispatch.cpp  main.cpp  malloc_override.cpp  run_ctors.cpp  stubs.cpp  vm_bridge.cpp
src/recomp/: import_stubs.cpp  ppu_recomp.h  trampoline_stubs.cpp
tools/: convert_trampolines.py  dump_string.py  gen_stubs.py  patch_blelr.py  post_lift.py  recompile.py  unpatch_blelr.py
